--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -116,54 +116,44 @@
         <div style="width:50%;height:31vh;display:flex;flex-wrap:wrap;">
             <div class="col-auto" style="width:100%;"><h2 class="sub_title">Basic</h2></div>
             @*Row 1*@
-            <div style="width:10%;">
-            </div>
-            <div style="width:35%;">
+            <div style="width: 35%; display: flex; align-items: center; justify-content:right;">
                 <label style="font-weight:bold">Choose Inspection Stage</label>
             </div>
-            <div style="width: 20%;">
-                @Html.DropDownListFor(o => o.InspectionStage, (List<SelectListItem>)ViewBag.InspectionStageList, null, new { @class = "form-control", @onchange = "onInspectionStageChange(this.value)" })
+            <div style="width: 20%; display: flex; align-items: center; justify-content:center;">
+                @Html.DropDownListFor(o => o.InspectionStage, (List<SelectListItem>)ViewBag.InspectionStageList, null, new { @class = "form-control", @style = "width:80%", @onchange = "onInspectionStageChange(this.value)" })
             </div>
-            <div style="width:20%">
-                <label style="font-weight:bold">Re-Inspection</label>
+            <div style="width: 16%; display: flex; align-items: center;">
+                <label style="font-weight: bold; text-align: right;">Re-Inspection</label>
             </div>
-            <div style="width: 15%;">
+            <div style="width: 29%; display: flex; align-items: center;">
                 @Html.CheckBoxFor(o => o.ReInspection, new { @style = "width: 2em;" })
             </div>
 
-
-
-
             @*Row 2*@
-            <div style="width:10%;"></div>
-            <div style="width:35%;">
+            <div style="width: 35%; display: flex; align-items: center; justify-content:right;">
                 <label style="font-weight:bold">What's day you audit?</label>
             </div>
-            <div style="width: 15%;">
-
-                @Html.TextBoxFor(o => o.AuditDate, "{0:yyyy/MM/dd}", new { @class = "date-picker", @style = "width:100%" })
+            <div style="width: 20%; display: flex; align-items: center; justify-content:center;">
+                @Html.TextBoxFor(o => o.AuditDate, "{0:yyyy/MM/dd}", new { @class = "date-picker", @style = "width:80%" })
             </div>
-            <div style="width:40%;"></div>
-
+            <div style="width:45%"></div>
 
             @*Row 3*@
-            <div style="width:10%;"></div>
-            <div style="width:35%;">
+            <div style="width: 35%; display: flex; align-items: center; justify-content:right;">
                 <label style="font-weight:bold">What's sewing line you audit?</label>
             </div>
-            <div style="width: 15%;">
-
-                @Html.TextBoxFor(o => o.SewingLineID, new { @readonly = "readonly", @style = "width:40%;float:left;" })
+            <div style="width: 20%; display: flex; align-items: center; justify-content:center;">
+                @Html.TextBoxFor(o => o.SewingLineID, new { @readonly = "readonly", @style = "width:80%;" })
+            </div>
+            <div style="width: 45%; display: flex; align-items: center; ">
                 <input type="button" onclick="ClearSewing(this)" name="name" value="Clear" style="float:left;" />
             </div>
-            <div style="width:40%;"></div>
 
             @*Row 4*@
-            <div style="width:10%;"></div>
-            <div style="width:20%;">
-
+            <div style="width: 20%; display: flex; align-items: center; justify-content: right;">
                 <label style="font-weight:bold">Shift</label>
-                @*@Html.DropDownListFor(o => o.Shift, (List<SelectListItem>)ViewBag.Shift, null, new { @class = "form-control", @style = "width:100px" })*@
+            </div>
+            <div style="width: 17.5%; display: flex; align-items: center; justify-content: center;">
                 @{var ShiftList = (List<SelectListItem>)ViewBag.Shift; }
                 <select id="Shift" name="Shift" class="form-control" style="width:100px">
                     @foreach (var item in ShiftList)
@@ -174,19 +164,24 @@
                 </select>
 
             </div>
-            <div style="width: 30%;">
+            <div style="width: 6%; display: flex; align-items: center; ">
+                <label style="font-weight:bold">Team</label>
+            </div>
+            <div style="width: 17.5%; display: flex; align-items: center; justify-content: center;">
 
-                <label style="padding-left:3em;font-weight:bold">Team</label>
                 @Html.DropDownListFor(o => o.Team, (List<SelectListItem>)ViewBag.SewingTeam, null, new { @class = "form-control", @style = "width:100px" })
             </div>
-            <div style="width: 40%;"></div>
-
+            <div style="width: 39%;"></div>
         </div>
 
             @*Inspection Number*@
-            <div style="width:50%;height:31vh;">
-                <div class="col-auto"><h2 class="sub_title">Inspection Number</h2></div>
-                <div class="col-auto"><label style="padding-left:3em;font-weight:bold">This is <font style="color:#0000ff">@Html.DisplayFor(o => o.InspectionTimes)</font> times to inspect for this PO#</label></div>
+            <div style="width: 50%; height: 31vh; display: flex; flex-wrap: wrap; align-content: start;">
+                <div class="col-auto" style="width: 100%;height:10%; display: flex;">
+                    <h2 class="sub_title">Inspection Number</h2>
+                </div>
+                <div class="col-auto" style="width: 100%; height: 10%; display: flex; ">
+                    <label style="padding-left:3em;font-weight:bold">This is <font style="color:#0000ff">@Html.DisplayFor(o => o.InspectionTimes)</font> times to inspect for this PO#</label>
+                </div>
                 @Html.HiddenFor(o => o.InspectionTimes)
             </div>
 
